# Crypt_archived

./: .gitignore  CMakeLists.txt  README  README.md  Rsa.cpp  algs.cpp  client_listener_main.cpp  client_main.cpp  client_writer_main.cpp  json-messages.json  main.cpp  server_main.cpp
headers/: Rsa.hpp  algs.hpp
sources/: Rsa.cpp  algs.cpp
sources/algs/: algs.cpp  algs.hpp
sources/base_crypt_algs/: base_crypt_algs.cpp  base_crypt_algs.hpp
sources/client/: client.cpp  client.hpp
sources/listener/: listener.cpp
sources/math_algs/: math_algs.cpp  math_algs.hpp
sources/messages_gen/: generators.cpp  generators.hpp
sources/rsa/: rsa.cpp  rsa.hpp
sources/server/: server.cpp  server.hpp
sources/writer/: writer.cpp
